--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </ul>
 </nav>
 <section class="slider">
-    <img id="slideImage" src="images/slide1.jpg" alt="Слайд 1">
+    <img id="slideImage" src="https://placehold.co/600x400/000000/FFF" alt="Слайд 1">
     <div class="caption">Нажмите стрелки влево/вправо для смены слайдов</div>
 </section>
 <script src="js/main.js"></script>
