--- a/gallery.html
+++ b/gallery.html
@@ -11,8 +11,8 @@
 </nav>
 <section class="gallery">
     <div class="gallery-item"><img src="https://placehold.co/600x400/EEE/31343C" alt="Фото 1"></div>
-    <div class="gallery-item"><img src="https://placehold.co/600x400/EEE/31343C" alt="Фото 2"></div>
-    <div class="gallery-item"><img src="https://placehold.co/600x400/EEE/31343C" alt="Фото 3"></div>
+    <div class="gallery-item"><img src="https://placehold.co/600x400/FFF/31343C" alt="Фото 2"></div>
+    <div class="gallery-item"><img src="https://placehold.co/600x400/000/31343C" alt="Фото 3"></div>
     <!-- Добавьте больше изображений по необходимости -->
 </section>
 <script src="js/main.js"></script>
