--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </nav>
 <section class="slider">
     <img id="slideImage" src="https://placehold.co/600x400/000000/FFF" alt="Слайд 1">
+    <img id="slideImage" src="https://placehold.co/600x400/000000/EEE" alt="Слайд 2">
+    <img id="slideImage" src="https://placehold.co/600x400/000000/000" alt="Слайд 3">
     <div class="caption">Нажмите стрелки влево/вправо для смены слайдов</div>
 </section>
 <script src="js/main.js"></script>
